# viva-parse

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/viva_parse/: __init__.py  dump.py  nemo.py  parse.py
tests/viva_parse/: test.py
