[tool.poetry]
name = "viva-parse"
version = "0.1.0"
description = "A python package to parse and dump conversations in VIVA style"
authors = ["Sven Schultze"]
readme = "README.md"
packages = [{include = "viva_parse"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
