[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viva_parse"
version = "0.0.2"
authors = [
  { name="Sven Schultze", email="schultze.sven@googlemail.com" },
]
description = "A python package to parse and dump conversations in VIVA style."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
]
